package eapli.base.domain.model;

import eapli.framework.domain.repositories.DomainRepository;

public interface CategoryRepository
        extends DomainRepository<AlphaNumericCode, Category> {
}

