@startuml
skinparam classAttributeIconSize 0

Package Presentation{
class SpecifyProductUI {
}
}

Package Application{

class SpecifyProductController {
 + getCategory()
 + registerProduct()
}
}

Package Domain{

class Product {
  -internal Code
  -short description
  -extended description
  -technical description
  -brand
  -reference
  -production code
  -price
  -barcode
  -photo
}


class Category{
}
}


Package Persistence{
class RepositoryFactory{
}

class ProductFactory{
}
class ProductRepository{
  +save(newProduct)
}

class CategoryRepository{
  +findall()
}
}

SpecifyProductUI ..> SpecifyProductController
SpecifyProductController ..> Product
SpecifyProductController ..> ProductRepository
SpecifyProductController ..> RepositoryFactory
SpecifyProductController ..> ProductFactory
RepositoryFactory ..> ProductRepository
RepositoryFactory ..> CategoryRepository
ProductFactory ..> RepositoryFactory
Product..> Category
CategoryRepository ..|> ProductRepository
@enduml